--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -139,11 +139,11 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 Previously in {productname}, some UI events were not detected by the focus controller when clicking outside the editor while a menu was open.
 
-Consequently, the `blur` event was not fired when switching focus to outside the editor.
+Consequently, the `blur` event was not fired when switching focus outside the editor, as the UI was still considered part of the editor.
 
-{productname} 7.0 addresses this, now, events from the UI are considered as part of the normal editor UI.
+{productname} 7.0 addresses this by now considering UI events as part of the normal editor events.
 
-As a result, the `blur` event is now fired when switching focus to outside the editor.
+As a result, the `blur` event is now properly fired when switching focus outside the editor.
 
 [[security-fixes]]
 == Security fixes
