--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -87,17 +87,17 @@ The {productname} <x.y[.z]> release includes an accompanying release of the **<P
 
 For information on the **<Premium plugin name 1>** plugin, see: xref:<plugincode>.adoc[<Premium plugin name 1>].
 
-=== Advanced Templates 7.0
+=== Templates
 
-The {productname} 7.0 release includes an accompanying release of the **Advanced Templates** premium plugin.
+The {productname} 7.0 release includes an accompanying release of the **Templates** premium plugin.
 
-**Advanced Templates** 7.0 includes the following fixes, additions, and improvements.
+**Templates** includes the following fixes, additions, and improvements.
 
-==== Missing tooltip for category and template three dots menu button in the **Advanced Templates** dialog
+==== Missing tooltip for category and template three dots menu button in the **Templates** dialog
 
-Previously, the three dots menu button for category and template in the **Advanced Templates** dialog were missing a tooltip, making them inaccessible.
+Previously, the three dots menu button for category and template in the **Templates** dialog were missing a tooltip, making them inaccessible.
 
-In {productname} 7.0, the three dot menu buttons for categories and templates in the Advanced Templates dialog now have informative tooltips. This clarifies their purpose for all users, enhancing discoverability and improving the overall experience, especially for those relying on assistive technologies.
+In {productname} 7.0, the three dot menu buttons for categories and templates in the Templates dialog now have informative tooltips. This clarifies their purpose for all users, enhancing discoverability and improving the overall experience, especially for those relying on assistive technologies.
 
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium plugin end-of-life announcement
