--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -94,6 +94,7 @@ The {productname} 7.0 release includes an accompanying release of the **Template
 **Templates** includes the following fixes, additions, and improvements.
 
 ==== Missing tooltip for category and template three dots menu button in the **Templates** dialog
+//# TINY-10615
 
 Previously, the three dots menu button for category and template in the **Templates** dialog were missing a tooltip, making them inaccessible.
 
