--- a/modules/ROOT/partials/configuration/exportword.adoc
+++ b/modules/ROOT/partials/configuration/exportword.adoc
@@ -73,8 +73,8 @@ tinymce.init({
   exportword_converter_options: { // required to support "exportword_converter_style"
     header: [
       {
-        html: '<h1>First page header.</h1>',
-        css: 'h1 { font-size: 30px; }',
+        html: '<h1>First page header.</h1>', //example
+        css: 'h1 { font-size: 30px; }', //example
       }
     ],
   },
