--- a/modules/ROOT/pages/mergetags.adoc
+++ b/modules/ROOT/pages/mergetags.adoc
@@ -101,7 +101,7 @@ Here is an example of the {pluginname} HTML structure.
 </span>
 ----
 
-== Merge Tags and the Template Insertion Point Marker
+== Merge Tags and the Templates Insertion Point Marker
 
 include::partial$misc/admon-requires-6.7v.adoc[]
 
