--- a/modules/ROOT/pages/7.0.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.0.1-release-notes.adoc
@@ -68,21 +68,6 @@ NOTE: This fix addresses xref:7.0-release-notes.adoc#non-breaking-spaces-nbsp-ma
 
 For information on the **Markdown** plugin, see: xref:markdown.adoc[Markdown].
 
-=== Mentions
-
-The {productname} {release-version} release includes an accompanying release of the **Mentions** premium plugin.
-
-This **Mentions** release includes the following fix.
-
-=== Tapping inside a composed text on Firefox Android would not close the autocompleter.
-// #TINY-10715
-
-Previously in **Mentions**, when typing Korean on Firefox Android and moving the caret inside the word being typed, the auto completer menu did not close. This issue was caused by Gboard triggering an extra input even after the composition had ended. As a result, the autocompleter mistakenly interpreted it as the user starting to type again.
-
-In {productname} {release-version}, this issue has been fixed. Now, the autocompleter menu is properly closed when tapping inside the word being typed on Firefox Android.
-
-For information on the **Mentions** plugin, see: xref:mentions.adoc[Mentions].
-
 === Revision History
 
 The {productname} {release-version} release includes an accompanying release of the **Revision History** premium plugin.
@@ -154,6 +139,13 @@ For information on the **Table of Contents** plugin, see: xref:tableofcontents.a
 Previously in {productname}, when creating a new list item, the editor only considered default root nodes. This caused the caret to be placed incorrectly and resulted in the editor generating a new list instead of adding a list item to the existing list.
 
 In {productname} {release-version}, this issue has been fixed. The editor now checks for non-default root nodes, such as when `forced_root_block` is set to `div`, when creating new list items. As a result, the caret is placed correctly after the creation of the new list item, allowing the editor to add a list item instead of generating a new list.
+
+=== Tapping inside a composed text on Firefox Android would not close the autocompleter.
+// #TINY-10715
+
+Previously in {productname}, when typing Korean on Firefox Android and moving the caret inside the word being typed, the autocompleter menu did not close. This issue was caused by the mobile keyboard triggering an extra input even after the composition had ended. As a result, the autocompleter mistakenly interpreted it as the user starting to type again.
+
+In {productname} {release-version}, this issue has been fixed. Now, the autocompleter menu is properly closed when tapping inside the word being typed on Firefox Android.
 
 === An inline editor toolbar now behaves correctly in horizontally scrolled containers.
 // #TINY-10684
