--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,6 +4,22 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
+
+== 7.0.1 - 2024-04-10
+
+=== Fixed
+* Toggle list behavior generated wrong HTML when the `forced_root_block` option was set to `div`.
+// #TINY-10488
+* Tapping inside a composed text on Firefox Android would not close the autocompleter.
+// #TINY-10715
+* An inline editor toolbar now behaves correctly in horizontally scrolled containers.
+// #TINY-10684
+* Tooltips unintended shrinking and incorrectly positioned when shown in horizontally scrollable container.
+// #TINY-10797
+* The status bar was invisible when the editor's height was set to the minimum.
+// #TINY-10705
+
+
 == 7.0.0 - 2024-03-20
 
 [NOTE]
