--- a/modules/ROOT/pages/keyboard-shortcuts.adoc
+++ b/modules/ROOT/pages/keyboard-shortcuts.adoc
@@ -30,6 +30,7 @@ This is a list of available keyboard shortcuts within the editor body.
 |Focus to menu bar |Alt+F9 |⌥+F9 |core
 |Focus to toolbar |Alt+F10 |⌥+F10 |core
 |Focus to element path |Alt+F11 |⌥+F11 |core
+|Focus to notification |Alt+F12 |⌥+F12 |core
 |Focus to contextual toolbar |Ctrl+F9 |Ctrl+F9 |core
 |Print |Ctrl+P |⌘+P |core
 |Open the {productname} Help dialog |Alt+0 |⌥+0 |xref:help.adoc[help]
@@ -59,6 +60,7 @@ This is a list of available keyboard shortcuts within the editor user interface.
 |Close submenu |Left Arrow / Esc |Left Arrow / Esc
 |Close dialog |Esc |Esc
 |Close menu |Esc |Esc
+|Close notification |Esc |Esc
 |Move focus back to editor body |Esc |Esc
 |===
 
