--- a/modules/ROOT/pages/7.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1-release-notes.adoc
@@ -114,6 +114,22 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 
 // CCFR here.
 
+=== Notification accessibility improvements: added tooltips, keyboard navigation and shortcut to focus on notifications.
+
+In previous versions of {productname}, an accessibility issue was identified that affected keyboard-only, specifically when a user receives a notification and they where unable to close it using the keyboard.
+
+As a consequence, users who rely on keyboard navigation or screen readers could only close the notifications via mouse "Click".
+
+{productname} {release-version} addressed this issue with the following changes: 
+
+* Keyboard Shortcut: keyboard shortcut *Alt+F12* (or *⌥+F12*) was added, that allows users to now focus on notifications, providing a way for keyboard-only users to access and interact with them.
+* Keyboard Navigation: allows keyboard navigation within the focusable elements in a notification, such as links and buttons, with *Tab* or *Shift+Tab*.
+* Tooltip: added a tooltip to the `close` button of the notification, providing additional context for users who may need it.
+* Link Styles: improved the styles of links within notifications, including `hover`, `focus`, `active`, and `focus-visible` states, to ensure that they are easily distinguishable and navigable.
+* Screen Reader Announcement: content of a notification is announced by screen readers, making it easier for visually impaired users to access and understand the information.
+
+As a result of these changes notifications now more accessible for all users.
+
 === New `index.js` file that includes all plugin resources.
 // #TINY-10778
 
