--- a/modules/ROOT/pages/7.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.1-release-notes.adoc
@@ -59,7 +59,7 @@ The following premium plugin updates were released alongside {productname} 7.1.
 
 === Accessibility Checker
 
-The {productname} 7.1 release includes an accompanying release of the **Accessibility Checker** premium plugin.
+The {productname} {release-version} release includes an accompanying release of the **Accessibility Checker** premium plugin.
 
 **Accessibility Checker** includes the following improvement.
 
