--- a/modules/ROOT/partials/events/a11ychecker-events.adoc
+++ b/modules/ROOT/partials/events/a11ychecker-events.adoc
@@ -3,7 +3,7 @@
 |Name |Data |Description
 |A11ycheckStart |N/A |Fired when the Accessibility Checker is `opened`
 |A11ycheckStop |N/A |Fired when the Accessibility Checker is `closed`
-|A11ycheckIgnore |N/A |Fired when the `Ignore` button is toggled
-|A11ycheckRepair |N/A |Fired when the `Repair` button is toggled
-|A11ycheckShowDetails |N/A |Fired when the `Click for more info` button is toggled
+|A11ycheckIgnore |N/A |Fired when the `Ignore` button is pressed
+|A11ycheckRepair |N/A |Fired when the `Repair` button is pressed
+|A11ycheckShowDetails |N/A |Fired when the `Click for more info` button is pressed
 |===
